Teamproject -2/project2/kubernetes/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: teamww
  labels:
    app: postgres
spec:
  containers:
  - name: postgres-container
    image: postgres
    ports:
      - containerPort: 5432
    volumeMounts:
      - mountPath: /var/lib/postgresql/data
        name: db-data
  volumes:
    - name: db-data
      emptyDir: {}
