Teamproject -2/project2/kubernetes/loki-external.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: teamww
spec:
  type: ExternalName
  externalName: loki.default.svc.cluster.local #servicename.namespace.svc.cluster.local
  ports:
  - port: 3100
    targetPort: 3100
