Teamproject -2/project2/kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: teamww

  labels:
    app: postgres
spec:
  type: ClusterIP # cluster ip by default if not declared
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
