Teamproject -2/project2/kubernetes/project2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project2-service
  namespace: teamww
  labels:
    app: project2-app
spec:
  selector:
    app: project2-app
  ports:
  - name : http
    port: 8080
    targetPort: 8080
    protocol: TCP
