Teamproject -2/project2/kubernetes/project2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: project2-ingress
   namespace: teamww
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingres.kubernetes.io/user-regex: "true"
     nginx.ingres.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - http:
       paths:
       - pathType: Prefix
         path: "/project2/(.*)"
         backend:
           service:
             name: project2-service
             port: 
               number: 8080
      #  - pathType: Prefix
      #    path: "/grafana/?(.*)"
      #    backend:
      #     service:
      #       name: prom-grafana
      #       port: 
      #         number: 80
